--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
+
+ .app{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
+} 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: white;
+  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* font-size: calc(10px + 2vmin); */
+  font-size: 17px;
+  color: rgb(22, 21, 21);
+}
+.smslist{
+  width: 500px;
+  /* float: left; */
+  margin: 15px 0px;
+  /* border: 2px solid red; */
+  background-color: #f1f0f0;
+}
+.name{
+  width: 100%;
+  font-size: 22px;
+ 
+  /* border: 2px solid rgb(14, 240, 134); */
+  float: left;
+  color: rgba(17, 16, 16, 0.986);
+}
+.name1{
+  margin: 10px 0px;
+}
+.pra{
+  width: 100%;
+  float: left;
+  /* border: 2px solid green; */
+  color: #2b2929;
+  font-size: 17px;
+}
+.email{
+  width: 80%;
+  float: left;
+  color: #1877f2;
+  /* border: 2px solid yellow; */
+}
+.body{
+  width: 100%;
+  float: left;
+  margin: 20px 0px;
+  /* border: 2px solid blue; */
 }
 
-.App-link {
-  color: #61dafb;
+hr{
+  float: left;
+  width: 100%;
+  border: 0.25px solid rgb(158, 153, 153);
+  /* margin: 10px 0px; */
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (max-width: 550px) {
+  .smslist{
+    width: 90%;
   }
 }
